--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logos/ssk_thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <meta property="og:image" content="/logos/ssk-thumbnail.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />   
+    <meta name="twitter:image" content="/logos/ssk-thumbnail.png" />
     <!-- SEO Meta Tags -->
     <title>Suyash Sreekumar - AI Engineer & Data Scientist | San Francisco</title>
     <meta name="description" content="Suyash Sreekumar - Master of AI & Data Analytics at Oregon State University. Specialized in RAG systems, machine learning, and enterprise data solutions. Available June 2025 in San Francisco Bay Area." />
