--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9L9K0FK5Q7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9L9K0FK5Q7');
+    </script>
+    
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
     {
